Please enter the commit message for your changes. Lines starting with '#' will be ignored, and an empty message aborts the commit.
On branch main
Your branch is up to date with 'origin/main'.

Changes to be committed:
	modified:   css/wiki.css
	modified:   javascript/wiki/wiki.js

--- a/css/wiki.css
+++ b/css/wiki.css
@@ -8,6 +8,7 @@ body {
 	margin: 0;
 	writing-mode: vertical-rl;
 	overflow-y: hidden;
+	background-color: #1c1f24;
 }
 
 #content {
@@ -19,6 +20,34 @@ body {
 :lang(han-char) {
 	text-orientation: upright;
 }
+
+#手机端警告 {
+	background-color: #0000ff;
+	overflow: hidden;
+	position: relative;
+	height: 100vh;
+	width: 40px;
+	align-content: center;
+}
+
+#手机端警告文字 {
+	color: white;
+	font-family: 閹割unifont;
+	text-align: center;
+	font-size: 30px;
+	animation: slideLeft 7s linear infinite;
+}
+
+@keyframes slideLeft {
+	0% {
+		transform: translateY(100vh);
+	}
+
+	100% {
+		transform: translateY(-100vh);
+	}
+}
+
 
 /**                                                                     **/
 /**                                介面列表                              **/
