Please enter the commit message for your changes. Lines starting with '#' will be ignored, and an empty message aborts the commit.
On branch main
Your branch is up to date with 'origin/main'.

Changes to be committed:
	new file:   "assets/\344\210\216\351\235\242\345\234\226\346\250\231/erase_file-0.ico"
	deleted:    "assets/\344\210\216\351\235\242\345\234\226\346\250\231/wiki/red.svg"
	modified:   css/index.css
	modified:   "fonts/\351\226\271\345\211\262unifont-Medium.woff2"
	modified:   index.html
	modified:   javascript/index/index.js
	modified:   javascript/wiki/wiki.js
	modified:   "javascript/\345\205\254\345\205\261/\347\247\201\347\224\250\345\255\227.js"
	modified:   "json/\345\205\254\345\205\261/\345\234\226\350\261\241\347\264\242\345\274\225.json"
	modified:   "wiki/\345\214\243\346\261\241\347\263\273.md"
	modified:   "wiki/\346\200\247\345\210\245\345\233\233\345\205\203\350\253\226.md"

--- a/css/index.css
+++ b/css/index.css
@@ -44,22 +44,8 @@ body {
 }
 
 .時間 {
-	color: #000000a0;
-	font-style: italic;
-	text-decoration: underline wavy;
+	text-orientation: sideways;
 	text-decoration-thickness: 1px;
-}
-
-
-#文者燒殺人 {
-	width: 200px;
-	image-rendering: pixelated;
-	margin-right: -20px;
-}
-
-#頁貼 {
-	float: left;
-	width: 270px;
 }
 
 #上列 {
@@ -74,7 +60,7 @@ body {
 
 
 #Q1 {
-	margin-right: 0;
+	/* margin-right: 0; */
 }
 
 /**                                                                     **/
@@ -155,7 +141,7 @@ body {
 
 div.塊 {
 	border: 2px solid #383838;
-	border-radius: 4px;
+	/* border-radius: 4px; */
 	color: white;
 	padding: 15px 10px;
 	margin: 5px;
