--- a/css/功能.css
+++ b/css/功能.css
@@ -4,3 +4,10 @@
 	-ms-user-select: none;
 	user-select: none;
 }
+
+.selectableAsText {
+	-webkit-user-select: text;
+	-moz-user-select: text;
+	-ms-user-select: text;
+	user-select: text;
+}
