--- a/css/index.css
+++ b/css/index.css
@@ -26,7 +26,7 @@ body {
 }
 
 body {
-	background-image: url('/assets/圖象/konataBG.png');
+	background-image: url('/assets/圖象/konataBG.jpg');
 	background-size: cover;
 	background-position: left top;
 	background-repeat: no-repeat;
