一些轉換上的事情，還有index

--- a/css/index.css
+++ b/css/index.css
@@ -277,3 +277,9 @@ div.塊 *::selection {
 #我的䈎面 a:hover {
 	text-decoration: underline;
 }
+
+#我的䈎面 div hr {
+	margin-top: 0;
+	height: 90%;
+	border-color: #ffffff40;
+}
