--- a/css/滾動條/方滾動條.css
+++ b/css/滾動條/方滾動條.css
@@ -98,6 +98,31 @@
 	--滾動條：矢右作: var(--滾動條：樣矢右泉此方綠淺縮);
 }
 
+.自訂滾動條[滾動條theme=""],
+.自訂滾動條[滾動條theme="default"],
+.自訂滾動條[滾動條theme="默認"] {
+
+	--滾動條：背景色: black;
+	--滾動條：三角背景色: black;
+	--滾動條：交界背景色: black;
+	--滾動條：條色: #ffffff40;
+	--滾動條：條色及: #ffffffa0;
+	--滾動條：條色作: #ffffff;
+
+	--滾動條：矢上常: var(--滾動條：樣矢上白);
+	--滾動條：矢上及: var(--滾動條：樣矢上白);
+	--滾動條：矢上作: var(--滾動條：樣矢上灰縮);
+	--滾動條：矢下常: var(--滾動條：樣矢下白);
+	--滾動條：矢下及: var(--滾動條：樣矢下白);
+	--滾動條：矢下作: var(--滾動條：樣矢下灰縮);
+	--滾動條：矢左常: var(--滾動條：樣矢左白);
+	--滾動條：矢左及: var(--滾動條：樣矢左白);
+	--滾動條：矢左作: var(--滾動條：樣矢左灰縮);
+	--滾動條：矢右常: var(--滾動條：樣矢右白);
+	--滾動條：矢右及: var(--滾動條：樣矢右白);
+	--滾動條：矢右作: var(--滾動條：樣矢右灰縮);
+}
+
 /**              滾動條              **/
 .自訂滾動條::-webkit-scrollbar {
 	width: 17px;
